tests/ui/borrowck/borrow-immutable-deref-box.stderr
error[E0596]: cannot borrow `*x` as mutable, as `x` is not declared as mutable
  --> $DIR/borrow-immutable-deref-box.rs:6:7
   |
LL |     f(&mut *x);
   |       ^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = Box::new(3);
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
